fixed color in mobile search input field for the dark theme fixed a bug with "jumping" texts in search-input due to strange border- and padding-behaviour

--- a/sass/components/_search.scss
+++ b/sass/components/_search.scss
@@ -112,10 +112,6 @@
             border: 2px solid v(button-bg);
             padding: 0;
 
-            .search-bar {
-                padding-left: 2.9rem;
-            }
-
             .search__icon {
                 top: 6px;
                 left: 8px;
